--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start":"yarn run dev"
   },
   "dependencies": {
     "@project-serum/anchor": "^0.20.1",
